# VulkanCompute

./: CMakeLists.txt  README.md  main.cpp
shaders/: greyscale.comp  greyscale.comp.spv
